똑같은 그림 찾기 미니게임

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,3 +86,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
