--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+GameDefaultMap=/Game/Level/Lv_Fortress.Lv_Fortress
+EditorStartupMap=/Game/Level/Lv_Fortress.Lv_Fortress
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
