chore: Initial commit

--- a/NoirBlanc.uproject
+++ b/NoirBlanc.uproject
@@ -7,7 +7,12 @@
 		{
 			"Name": "NoirBlanc",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject",
+				"Engine",
+				"UMG"
+			]
 		}
 	],
 	"Plugins": [
