--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ Saved
 *.xcworkspace
 
 .idea
+Content/ChiHeon
+Content/__ExternalActors__
+Content/__ExternalObjects__
+Content/Characters/Mannequins
+Content/Characters/Mannequin_UE4
+Content/LevelPrototyping
+Content/ThirdPerson
