--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+EditorStartupMap=/Game/Level/Lv_Bishop.Lv_Bishop
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Level/Lv_Bishop.Lv_Bishop
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_BishopGameMode.BP_BishopGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -35,19 +46,12 @@ SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=True
-
 r.GenerateMeshDistanceFields=True
-
 r.DynamicGlobalIlluminationMethod=1
-
 r.ReflectionMethod=1
-
 r.Shadow.Virtual.Enable=1
-
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
@@ -71,6 +75,8 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/NoirBlanc")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/NoirBlanc")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/NoirBlanc")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/NoirBlanc")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -85,4 +91,17 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/NoirBlanc.TypingUIWidget.TargetText",NewName="/Script/NoirBlanc.TypingUIWidget.TextToTypeUI")
++PropertyRedirects=(OldName="/Script/NoirBlanc.TypingUIWidget.InputField",NewName="/Script/NoirBlanc.TypingUIWidget.UserInput")
++PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.TextToType",NewName="/Script/NoirBlanc.BishopGameMode.TextsToType")
++PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.TypingUIWidget",NewName="/Script/NoirBlanc.BishopGameMode.TypingUIWidgetClass")
++PropertyRedirects=(OldName="/Script/NoirBlanc.Weapon.MeshComp",NewName="/Script/NoirBlanc.Weapon.MeshComponent")
++PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.allStartPoints",NewName="/Script/NoirBlanc.BishopGameMode.AllStartPoints")
++FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ServerRPC_SetUI",NewName="/Script/NoirBlanc.BishopGamePlayerController.ServerRPC_GetRandomText")
++FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ClientRPC_GetRandomText",NewName="/Script/NoirBlanc.BishopGamePlayerController.ClientRPC_SetRandomText")
++FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ServerRPC_GetRandomText",NewName="/Script/NoirBlanc.BishopGamePlayerController.ServerRPC_SetRandomText")
++ClassRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController",NewName="/Script/NoirBlanc.BishopGamePlayerController")
++FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPawn.ServerRPC_CommitTextText",NewName="/Script/NoirBlanc.BishopPawn.ServerRPC_CommitText")
 
