--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,11 +97,25 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/NoirBlanc.TypingUIWidget.InputField",NewName="/Script/NoirBlanc.TypingUIWidget.UserInput")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.TextToType",NewName="/Script/NoirBlanc.BishopGameMode.TextsToType")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.TypingUIWidget",NewName="/Script/NoirBlanc.BishopGameMode.TypingUIWidgetClass")
-+PropertyRedirects=(OldName="/Script/NoirBlanc.Weapon.MeshComp",NewName="/Script/NoirBlanc.Weapon.MeshComponent")
++PropertyRedirects=(OldName="/Script/NoirBlanc.Weapon.MeshComp",NewName="/Script/NoirBlanc.BishopWeapon.MeshComponent")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.BishopGameMode.allStartPoints",NewName="/Script/NoirBlanc.BishopGameMode.AllStartPoints")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ServerRPC_SetUI",NewName="/Script/NoirBlanc.BishopGamePlayerController.ServerRPC_GetRandomText")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ClientRPC_GetRandomText",NewName="/Script/NoirBlanc.BishopGamePlayerController.ClientRPC_SetRandomText")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController.ServerRPC_GetRandomText",NewName="/Script/NoirBlanc.BishopGamePlayerController.ServerRPC_SetRandomText")
 +ClassRedirects=(OldName="/Script/NoirBlanc.BishopPlayerController",NewName="/Script/NoirBlanc.BishopGamePlayerController")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.BishopPawn.ServerRPC_CommitTextText",NewName="/Script/NoirBlanc.BishopPawn.ServerRPC_CommitText")
++FunctionRedirects=(OldName="/Script/NoirBlanc.TaggerCharacter.ServerRPC_Jump",NewName="/Script/NoirBlanc.TaggerCharacter.ServerRPC_JumpStarted")
++PropertyRedirects=(OldName="/Script/NoirBlanc.TaggerCharacter.JumpPower",NewName="/Script/NoirBlanc.TaggerCharacter.MultiplyJumpPower")
++ClassRedirects=(OldName="/Script/NoirBlanc.Weapon",NewName="/Script/NoirBlanc.BishopWeapon")
++PropertyRedirects=(OldName="/Script/NoirBlanc.FloorButton.MeshComponent",NewName="/Script/NoirBlanc.FloorButton.ButtonBodyMeshComponent")
++FunctionRedirects=(OldName="/Script/NoirBlanc.FloorButton.OnBoxComponentBeginOverlap",NewName="/Script/NoirBlanc.FloorButton.OnDetectAreaBeginOverlap")
++FunctionRedirects=(OldName="/Script/NoirBlanc.FloorButton.OnBoxComponentEndOverlap",NewName="/Script/NoirBlanc.FloorButton.OnDetectAreaEndOverlap")
++FunctionRedirects=(OldName="/Script/NoirBlanc.FloorButton.Server_OnButtonPressed",NewName="/Script/NoirBlanc.FloorButton.ServerRPC_OnButtonPressed")
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=False
+MaxSubstepDeltaTime=0.010000
+bSubsteppingAsync=False
+MaxSubsteps=4
+bTickPhysicsAsync=False
 
