[feat]Offline Chess Finished

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BP_NoirBlancGameInstance.BP_NoirBlancGameInstance_C
 GameDefaultMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
@@ -101,3 +101,4 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
+
