feat: King Game Prototype

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+EditorStartupMap=/Game/Level/Lv_King.Lv_King
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+GameDefaultMap=/Game/Level/Lv_King.Lv_King
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
 GlobalDefaultServerGameMode=None
@@ -101,3 +101,15 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
++PropertyRedirects=(OldName="/Script/NoirBlanc.KingGameMode.DefaultMappingContext",NewName="/Script/NoirBlanc.KingGameMode.KingMappingContext")
++ClassRedirects=(OldName="/Script/NoirBlanc.ClickableActor",NewName="/Script/NoirBlanc.SpawnLocation")
++ClassRedirects=(OldName="/Script/NoirBlanc.SpawnLocationActor",NewName="/Script/NoirBlanc.SpawnLocation")
++PropertyRedirects=(OldName="/Script/NoirBlanc.SpawnLocation.Front",NewName="/Script/NoirBlanc.SpawnLocation.FrontArrow")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.ClientRPC_Click",NewName="/Script/NoirBlanc.KingCatcherPawn.ClientRPC_Toggle")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.ClientRPC_Toggle",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_ToggleOnlyForOwner")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_ToggleOnlyForOwner",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_Toggle")
++FunctionRedirects=(OldName="/Script/NoirBlanc.SpawnLocation.MulticastRPC_ToggleOnlyForCatcher",NewName="/Script/NoirBlanc.SpawnLocation.MulticastRPC_SelectOnlyForCatcher")
++FunctionRedirects=(OldName="/Script/NoirBlanc.SpawnLocation.MulticastRPC_SelectOnlyForCatcher",NewName="/Script/NoirBlanc.SpawnLocation.Select")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_Select",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_SelectOnlyForLocallyPlayer")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_Deselect",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_DeselectOnlyForLocallyPlayer")
+
