--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,3 +102,18 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+; If using Sessions
+; bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
