--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+EditorStartupMap=/Game/Level/Lv_Fortress.Lv_Fortress
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_NoirBlancGameInstance.BP_NoirBlancGameInstance_C
-GameDefaultMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+GameDefaultMap=/Game/Level/Lv_Fortress.Lv_Fortress
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
 GlobalDefaultServerGameMode=None
@@ -101,6 +101,8 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
++FunctionRedirects=(OldName="/Script/NoirBlanc.FortressUI.changeHPBar",NewName="/Script/NoirBlanc.FortressUI.ChangeHPBar")
++ClassRedirects=(OldName="/Script/NoirBlanc.FortressGameBase",NewName="/Script/NoirBlanc.FortressGameMode")
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
@@ -117,3 +119,4 @@ SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
