--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_TempLobby.Lv_TempLobby
+EditorStartupMap=/Game/Level/Lv_PawnCard.Lv_PawnCard
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -9,8 +9,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/NoirBlanc.TempNoirBlancGameInstance
-GameDefaultMap=/Game/Level/Lv_TempLobby.Lv_TempLobby
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Level/Lv_PawnCard.Lv_PawnCard
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
 GlobalDefaultServerGameMode=None
@@ -116,3 +116,4 @@ bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
