--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_TempLobby.Lv_TempLobby
+EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/NoirBlanc.TempNoirBlancGameInstance
+GameInstanceClass=/Game/Blueprints/BP_NoirBlancGameInstance.BP_NoirBlancGameInstance_C
 GameDefaultMap=/Game/Level/Lv_TempLobby.Lv_TempLobby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
@@ -116,3 +116,4 @@ bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
