--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,6 +101,8 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/NoirBlanc.PawnCardDataAset",NewName="/Script/NoirBlanc.PawnCardDataAsset")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
++FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.MulticastRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame")
++FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_CreateUI")
 
 
 [/Script/Engine.GameEngine]
