--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,6 +103,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/NoirBlanc.PawnCardController.TurnCardActorComp",NewName="/Script/NoirBlanc.PawnCardController.TurnCardComp")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.MulticastRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_CreateUI")
++PropertyRedirects=(OldName="/Script/NoirBlanc.TurnUI.Turn",NewName="/Script/NoirBlanc.TurnUI.Turn_Blanc")
 
 
 [/Script/Engine.GameEngine]
