fix: missile rotation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+EditorStartupMap=/Game/Level/Lv_Fortress.Lv_Fortress
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_NoirBlancGameInstance.BP_NoirBlancGameInstance_C
-GameDefaultMap=/Game/Level/Lv_TempLobby.Lv_TempLobby
+GameDefaultMap=/Game/Level/Lv_Fortress.Lv_Fortress
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameModeBase.BP_ChessGameModeBase_C
 GlobalDefaultServerGameMode=None
