--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,6 +105,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.MulticastRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_CreateUI")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.TurnUI.Turn",NewName="/Script/NoirBlanc.TurnUI.Turn_Blanc")
++FunctionRedirects=(OldName="/Script/NoirBlanc.IKingUIUpdatable.MulticastRPC_InitializeTypingUI",NewName="/Script/NoirBlanc.IKingUIUpdatable.MulticastRPC_InitializeMainGameUI")
 
 
 [/Script/Engine.GameEngine]
