feat: KingGame UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -106,6 +106,14 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/NoirBlanc.Player_Knight.ClientRPC_StartGame",NewName="/Script/NoirBlanc.Player_Knight.ClientRPC_CreateUI")
 +PropertyRedirects=(OldName="/Script/NoirBlanc.TurnUI.Turn",NewName="/Script/NoirBlanc.TurnUI.Turn_Blanc")
 +FunctionRedirects=(OldName="/Script/NoirBlanc.IKingUIUpdatable.MulticastRPC_InitializeTypingUI",NewName="/Script/NoirBlanc.IKingUIUpdatable.MulticastRPC_InitializeMainGameUI")
++ClassRedirects=(OldName="/Script/NoirBlanc.KingCatcherFireButton",NewName="/Script/NoirBlanc.KingCatcherFireButtonUI")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_SelectForAll",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_Select")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_DeselectForAll",NewName="/Script/NoirBlanc.KingCatcherPawn.MulticastRPC_Deselect")
++PropertyRedirects=(OldName="/Script/NoirBlanc.KingCatcherFireButtonUI.Button_Fire",NewName="/Script/NoirBlanc.KingCatcherFireButtonUI.Button_FireLocation")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.OnConfirmButtonClicked",NewName="/Script/NoirBlanc.KingCatcherPawn.HandleConfirmButtonClick")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.ServerRPC_OnConfirmButtonClicked",NewName="/Script/NoirBlanc.KingCatcherPawn.ServerRPC_HandleConfirmButtonClick")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.ServerRPC_HandleConfirmButtonClick",NewName="/Script/NoirBlanc.KingCatcherPawn.ServerRPC_HandleFireButtonClick")
++FunctionRedirects=(OldName="/Script/NoirBlanc.KingCatcherPawn.HandleConfirmButtonClick",NewName="/Script/NoirBlanc.KingCatcherPawn.HandleFireButtonClick")
 
 
 [/Script/Engine.GameEngine]
