--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/Lv_ChessBoard.Lv_ChessBoard
+EditorStartupMap=/Game/Level/Lv_Fortress.Lv_Fortress
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
